unpackaged/main/default/objects/Transmission__c/Transmission__c.object-meta.xml
<CustomObject>
    <label>Transmission</label>
    <nameField>
        <displayFormat>T-{00000000}</displayFormat>
        <label>Transmission</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transmissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>