unpackaged/main/default/objects/Transmission__c/fields/Cible__c.field-meta.xml
<CustomField>
    <fullName>Cible__c</fullName>
    <label>Cible</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>état général</fullName>
                <default>true</default>
                <label>état général</label>
            </value>
            <value>
                <fullName>cardio-respiratoire</fullName>
            </value>
            <value>
                <fullName>urinaire</fullName>
            </value>
            <value>
                <fullName>digestif</fullName>
            </value>
            <value>
                <fullName>génital</fullName>
            </value>
            <value>
                <fullName>escarre</fullName>
            </value>
            <value>
                <fullName>cutanéo-muqueux</fullName>
            </value>
            <value>
                <fullName>psychologique</fullName>
            </value>
            <value>
                <fullName>neurologique</fullName>
            </value>
            <value>
                <fullName>douleur</fullName>
            </value>
            <value>
                <fullName>locomoteur</fullName>
            </value>
            <value>
                <fullName>famille</fullName>
            </value>
            <value>
                <fullName>intervenants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>