unpackaged/main/default/objects/Transmission__c/fields/Date_de_la_transmission__c.field-meta.xml
<CustomField>
    <fullName>Date_de_la_transmission__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Date</label>
    <type>Date</type>
</CustomField>