unpackaged/main/default/objects/Transmission__c/fields/Dossier_de_soins_del__c.field-meta.xml
<CustomField>
    <fullName>Dossier_de_soins_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier de soins</label>
    <referenceTo>Dossier_de_soins__c</referenceTo>
    <relationshipLabel>Transmissions</relationshipLabel>
    <relationshipName>Transmissions_del</relationshipName>
    <type>Lookup</type>
</CustomField>