unpackaged/main/default/objects/Transmission__c/fields/Evaluations__c.field-meta.xml
<CustomField>
    <fullName>Evaluations__c</fullName>
    <label>Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>