unpackaged/main/default/objects/Transmission__c/fields/Indicateur__c.field-meta.xml
<CustomField>
    <fullName>Indicateur__c</fullName>
    <label>Indicateur</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stable</fullName>
            </value>
            <value>
                <fullName>À surveiller</fullName>
            </value>
            <value>
                <fullName>Instable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>