unpackaged/main/default/objects/Transmission__c/fields/Transmission__c.field-meta.xml
<CustomField>
    <fullName>Transmission__c</fullName>
    <label>Observation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>