unpackaged/main/default/objects/Transmission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Dossier_de_soins_del__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>